<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>stella_pointcloud_handler</name>
  <version>1.0.0</version>
  <description>
    ROS2 Pointcloud2 Handler nodes for STELLA
  </description>

  <maintainer email="lab@ntrex.co.kr">NTREX LAB</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>PCL</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>